--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -1,33 +1,21 @@
-.App {
-  text-align: center;
+.login-container {
+  height: 80vh;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.login-form {
+  width: 35vw;
+  border: 1px solid white;
+  padding: 50px;
+  border-radius: 5px;
+  background: whitesmoke;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.padding-bottom24 {
+  padding-bottom: 24px;
+}
+
+.flex-center {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
