update loginHook to return login data from store

--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -19,3 +19,13 @@
   align-items: center;
   justify-content: center;
 }
+
+.help-block {
+  padding-left: 10px;
+  font-size: 13px;
+  margin-top: -15px;
+}
+
+.help-block {
+  color: #f44336;
+}
