Revert "Merge pull request #2 from ekaruztech/ft-admin-section"
This reverts commit 365a524ea5bf0b54689665c52169feb1ca939c19, reversing
changes made to 48193c7facc6974f3175e986e1141c3f707ced82.

--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -1,31 +1,33 @@
-.login-container {
-  height: 80vh;
+.App {
+  text-align: center;
 }
 
-.login-form {
-  width: 35vw;
-  border: 1px solid white;
-  padding: 50px;
-  border-radius: 5px;
-  background: whitesmoke;
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 40vmin;
+  pointer-events: none;
 }
 
-.padding-bottom24 {
-  padding-bottom: 24px;
-}
-
-.flex-center {
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.help-block {
-  padding-left: 10px;
-  font-size: 13px;
-  margin-top: -15px;
+.App-link {
+  color: #61dafb;
 }
 
-.help-block {
-  color: #f44336;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
