--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -57,14 +57,15 @@ td > a {
 
 #sidebar nav > a {
   display: block;
-  padding-top: 1rem;
+  text-decoration: none;
 }
 
 #sidebar {
   padding: 1rem 0 2rem 2rem;
   display: flex;
   height: calc(100vh - 4rem);
-  width: 20%;
+  width: 25%;
+  overflow-y: scroll;
   flex-direction: column;
   background-color: beige;
   position: sticky;
@@ -76,7 +77,7 @@ td > a {
 	/* height: 100%; */
 }
 
-#content {
+.content {
   min-height: calc(100vh - 4rem);
   flex-grow: 9;
   padding: 2rem;
@@ -90,4 +91,8 @@ td > a {
   display: flex;
   justify-content: center;
   padding-top: 2rem;
+}
+
+.module-title {
+  padding-top: 1rem;
 }
