--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -64,7 +64,7 @@ td > a {
   padding: 1rem 0 2rem 2rem;
   display: flex;
   height: calc(100vh - 4rem);
-  width: 25%;
+  width: 280px;
   overflow-y: scroll;
   flex-direction: column;
   background-color: beige;
@@ -72,14 +72,15 @@ td > a {
   top: 4rem;
 }
 
-.sidebar-wrapper {
+.module-parent {
 	display: flex;
 	/* height: 100%; */
 }
 
 .content {
   min-height: calc(100vh - 4rem);
-  flex-grow: 9;
+  width: 100%;
+  /* flex-grow: 9; */
   padding: 2rem;
 }
 
@@ -95,4 +96,21 @@ td > a {
 
 .module-title {
   padding-top: 1rem;
+}
+
+.default-pad {
+  padding: 2rem;
+}
+
+.title-header {
+  position: relative;
+}
+
+.title-header h3 {
+  display: inline-block;
+}
+
+.title-header a {
+  position: absolute;
+  right: 17px;
 }
